# project-euler

./: .gitignore  .pre-commit-config.yaml  README.md  notes.md  problem_51.py  pyproject.toml  utils.py
projecteuler/: utils.py
projecteuler/solutions/: problem_51.py  problem_60.py  problem_64.py
